--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <nav>
-        <a href="{{ url_for('index') }}">FlaskApp</a>
+        <a href="{{ url_for('index') }}">Libreria</a>
         <a href="#">About</a>
     </nav>
     <hr>
